	  support/regression/tests/gcc-torture-execute-strct-varg-1.c,
	  support/regression/tests/gcc-torture-execute-va-arg-4.c,
	  support/regression/tests/structparam.c,
	  support/regression/tests/gcc-torture-execute-20021118-1.c,
	  support/regression/tests/gcc-torture-execute-20040707-1.c,
	  support/regression/tests/gcc-torture-execute-20180131-1.c,
	  support/regression/tests/gcc-torture-execute-pr67226.c:
	  struct parameter support for non-reentrant functions.

2022-03-29 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx:
	  Reference section 3.2.5 in 3.2.4, fix typo in 1.2.

2022-03-29 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/sdbinutils/bfd/*:
	  Delete unused files as suggested by Felix Salfelder (felixs).

2022-03-28 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/tlcs90/strlen.s:
	  Fix regression from [r13318].

2022-03-28 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/ports/tlcs90/spec.mk:
	  Do not meit debug info to ease reading asm files.
	* src/z80/ralloc2.cc:
	  Fix code generation issues in use of iy.

2022-03-28 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix bug #3373.

2022-03-28 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sim/ucsim/z80.src/gb80.cc,
	  sim/ucsim/z80.src/gb80cl.h,
	  sim/ucsim/z80.src/inst.cc,
	  sim/ucsim/z80.src/inst_gb80.cc:
	  Fix cycle accuracy.

2022-03-27 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/astlcs90/tt90.asm,
	  sim/ucsim/tlcs.src/inst_arith.cc,
	  sim/ucsim/tlcs.src/inst_jump.cc,
	  sim/ucsim/tlcs.src/tlcs.cc:
	  Improve cycle accuracy.

2022-03-27 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/astlcs90/tt90.asm:
	  Add some test assembly.

2022-03-26 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bitintvararg.c.in:
	  Fix host test disable condition.

2022-03-26 Sebastian 'basxto' Riedel <sdcc@basxto.de>
